--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml+ gif" href="/heart.gif" />
+    <link rel="icon" type="image/svg+xml+ gif" href="/monster.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reat Complete 2023</title>
+    <title>Monster Rolodex</title>
   </head>
   <body>
     <div id="root"></div>
